build: change API key and add v-html for displaying guardian content

--- a/app/locales/hu-HU.json
+++ b/app/locales/hu-HU.json
@@ -13,7 +13,8 @@
             "lastLoaded": "Utoljára betöltve"
         },
         "header": {
-            "settings": "Beállítások"
+            "settings": "Beállítások",
+            "resetConfirmation": "Biztosan vissza szeretné állítani az összes beállítást és adatot?"
         },
         "optionalFields": {
             "heartRate": "Átlag pulzusszám",
